━━╬٨ـﮩﮩ♥ ٨ـﮩﮩـ╬━♥ ❥༄ᶦᶰᵈ᭄AJAD࿐

--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ a{
 .caption{
     margin-bottom: 5px;
     padding: 3%;
-    font-family: 'Cinzel', serif;
+    font-family: 'Cinzel', 'Mukti', 'EkusheyLohit', serif;
 }
 .content{
     height: 100%;
